<resources>
    <string name="app_name">PiCON</string>

    <string name="map_menu_manage_friend">친구 관리하기</string>
    <string name="map_menu_customize_emotion_name">감정 이름 커스텀하기</string>
    <string name="map_menu_collect_picture">사진 모아보기</string>
    <string name="map_menu_share_map">지도 공유하기</string>
    <string name="map_menu_view_travel_statistic">여행통계 보기</string>
    <string name="map_menu_setting">설정</string>
    <string name="map_post_form_info">지도를 움직여 위치를 설정해주세요</string>
    <string name="map_shared_button">현재 지도 공유하기</string>

    <string name="my_profile_follower">팔로워</string>
    <string name="my_profile_following">팔로잉</string>

    <string name="nav_setting_about">About PiCON</string>
    <string name="nav_setting_app_info">버전 정보</string>
    <string name="nav_setting_app_version">v 1.0.0</string>
    <string name="nav_setting_app_review">앱 리뷰 남기기</string>
    <string name="nav_setting_account">계정</string>
    <string name="nav_setting_withdrawal">계정탈퇴</string>
    <string name="nav_setting_logout">로그아웃</string>
    <string name="nav_setting_dialog_logout_title">로그아웃하시겠습니까?</string>
    <string name="nav_setting_dialog_withdrawal_title">정말로 탈퇴하시겠습니까?</string>
    <string name="nav_setting_dialog_withdrawal_content">계정의 모든 데이터가 삭제되며 되돌릴 수 없습니다.</string>

    <string name="nav_custom_title">감정 커스텀</string>
    <string name="nav_custom_save">저장</string>
    <string name="nav_custom_text_soft_blue">새벽 3시</string>
    <string name="nav_custom_text_cornflower">구름없는 하늘</string>
    <string name="nav_custom_text_blue_grey">아침 이슬</string>
    <string name="nav_custom_text_very_light_brown">창문 너머 노을</string>
    <string name="nav_custom_text_warm_grey">잔잔한 밤</string>

    <string name="nav_statistic_title">9월 여행 통계</string>
    <string name="nav_statistic_emotion_title">감정별</string>
    <string name="nav_statistic_place_title">장소 Top5</string>
    <string name="nav_statistic_pin">핀</string>
    <string name="nav_statistic_place">서울 강남구</string>

    <string name="manage_friend_edit_hint">닉네임 또는 이메일을 검색하세요</string>
    <string name="friend_profile_empty_post_list">게시물이 존재하지 않습니다.</string>

    <string name="dialog_custom_remove_post_title">핀을 삭제하시겠습니까?</string>
    <string name="dialog_custom_emotion_title">색상에 어울리는 감정을 정해주세요.</string>
    <string name="dialog_custom_finish_title">변경된 내용을 저장하지 않겠습니까?</string>

    <string name="image_description">이미지</string>

    <string name="search_et_hint">핀을 추가할 위치를 검색하세요</string>
    <string name="search_recently_search">최근 검색</string>

    <string name="post_this_emotion">이 곳의 감정</string>
    <string name="post_et_memo_hint">(선택) 메모를 작성해주세요.</string>
    <string name="post_et_address_hint">(필수) 주소를 불러올 수 없습니다. 작성해주세요.</string>

    <string name="login_picon_start">PiCON 시작하기</string>
    <string name="login_sns_login">SNS계정으로 로그인하기</string>
    <string name="login_is_first">처음이신가요?&#160;</string>
    <string name="login_simple_join">간편가입하기</string>

    <string name="simple_join_input_id">아이디 입력</string>
    <string name="simple_join_input_pw">비밀번호 입력 (6 – 14자리)</string>
    <string name="simple_join_input_pw_re">비밀번호 재입력</string>
    <string name="simple_join_input_nic">닉네임 입력</string>

    <string name="intro_fragment_1_title">추억을 지도 위에</string>
    <string name="intro_fragment_1_sub">여행한 장소에 핀을 추가해서\n나만의 여행지도를 만들어보세요.</string>
    <string name="intro_fragment_2_title">다섯가지 색상 핀</string>
    <string name="intro_fragment_2_sub">색상의 이름을 원하는 감정으로 설정하고\n나만의 지도를 커스텀해보세요!</string>
    <string name="intro_fragment_3_title">PiCON의 100% 활용법</string>
    <string name="intro_fragment_3_sub">사진을 필터링해서 모아보고\n나만의 여행지도를 공유해보세요.</string>도

    <string name="X">X</string>
    <string name="follow">팔로우</string>
    <string name="un_follow">언팔로우</string>
    <string name="edit">편집</string>
    <string name="remove">삭제</string>
    <string name="confirm">확인</string>
    <string name="withdrawal">탈퇴</string>
    <string name="cancellation">취소</string>
    <string name="temp_save">임시저장</string>
    <string name="add_picture">사진 추가</string>
    <string name="new_pin">새로운 핀</string>
    <string name="save">저장</string>
    <string name="location">위치</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="join_membership">회원가입</string>
    <string name="pin_gallery">핀 갤러리</string>
    <string name="collecting">모아보기</string>
    <string name="memo">메모</string>
    <string name="remove_pin">핀 삭제</string>
</resources>