<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map_nav_customize_emotion_name"
            android:title="@string/map_menu_customize_emotion_name" />
        <item
            android:id="@+id/map_nav_collect_picture"
            android:title="@string/map_menu_collect_picture" />
        <item
            android:id="@+id/map_nav_share_map"
            android:title="@string/map_menu_share_map" />
        <item
            android:id="@+id/map_nav_view_travel_statistic"
            android:title="@string/map_menu_view_travel_statistic" />
        <item
            android:id="@+id/map_nav_setting"
            android:title="@string/map_menu_setting" />
    </group>
</menu>