<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingRepo"
            type="com.yapp.picon.presentation.nav.repository.SettingRepository" />
        <variable
            name="navVM"
            type="com.yapp.picon.presentation.nav.NavViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ffffff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/nav_setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="#00ffffff"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/nav_setting_back_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/image_description"
                    android:onClick="@{navVM::clickFinishButton}"
                    android:padding="18dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_menu_setting"
                    android:textColor="@color/very_light_pink"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/nav_setting_back_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nav_setting_back_iv" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="6dp"
            android:text="@string/nav_setting_about"
            android:textColor="@color/brown_grey_two"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_setting_toolbar" />

        <TextView
            android:id="@+id/nav_setting_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="start|center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/nav_setting_app_info"
            android:textColor="@color/pale_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/about_tv"
            app:layout_constraintTop_toBottomOf="@+id/about_tv" />

        <Button
            android:id="@+id/nav_setting_review_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="start|center_vertical"
            android:onClick="@{settingRepo::clickReview}"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/nav_setting_app_review"
            android:textColor="@color/pale_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/nav_setting_version_text"
            app:layout_constraintTop_toBottomOf="@+id/nav_setting_version_text" />

        <TextView
            android:id="@+id/nav_setting_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="38dp"
            android:text="@{settingRepo.version}"
            android:textColor="@color/pale_grey"
            app:layout_constraintBottom_toBottomOf="@+id/nav_setting_version_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_tv" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="36dp"
            android:text="@string/nav_setting_account"
            android:textColor="@color/brown_grey_two"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_setting_review_button" />

        <Button
            android:id="@+id/nav_setting_withdrawal_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:onClick="@{settingRepo::clickWithdrawal}"
            android:text="@string/nav_setting_withdrawal"
            android:textColor="@color/pale_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/nav_setting_logout_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:onClick="@{settingRepo::clickLogout}"
            android:text="@string/nav_setting_logout"
            android:textColor="@color/coral"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/nav_setting_withdrawal_button"
            app:layout_constraintTop_toBottomOf="@+id/nav_setting_withdrawal_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>