<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/BoldTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4sp"
            android:text="@string/intro_fragment_3_title"
            android:textColor="@color/pale_grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="10sp"
            android:text="@string/intro_fragment_3_sub"
            android:textColor="@color/very_light_pink_two"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/intro_image_fragment_iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/intro_img_3"
            android:contentDescription="@string/image_description" />

        <ImageView
            android:id="@+id/intro_image_fragment_iv_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:background="@drawable/intro_page_3"
            android:contentDescription="@string/image_description" />

    </LinearLayout>
</layout>