<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="customRepo"
            type="com.yapp.picon.presentation.nav.repository.CustomEmotionRepository" />
        <variable
            name="navVM"
            type="com.yapp.picon.presentation.nav.NavViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/nav_emotion_toolbar"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="#00ffffff"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/nav_emotion_finish_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="18dp"
                    android:onClick="@{navVM::clickFinishButton}"
                    android:src="@drawable/ic_delete_w"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/nav_emotion_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_custom_title"
                    android:textColor="@color/very_light_pink"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/nav_emotion_finish_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nav_emotion_finish_iv" />

                <Button
                    android:id="@+id/nav_emotion_save_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="6dp"
                    android:gravity="center_vertical|end"
                    android:paddingStart="0dp"
                    android:paddingEnd="12dp"
                    android:text="@string/nav_custom_save"
                    android:textColor="@color/very_light_pink"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/nav_emotion_title_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/nav_emotion_title_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <com.yapp.picon.presentation.customview.CustomEmotionItem
            android:id="@+id/nav_emotion_soft_blue_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:circleColor="@color/soft_blue"
            app:emotionText="@string/nav_custom_text_soft_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_emotion_toolbar" />

        <com.yapp.picon.presentation.customview.CustomEmotionItem
            android:id="@+id/nav_emotion_cornflower_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:circleColor="@color/cornflower"
            app:emotionText="@string/nav_custom_text_cornflower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_emotion_soft_blue_item" />

        <com.yapp.picon.presentation.customview.CustomEmotionItem
            android:id="@+id/nav_emotion_blue_grey_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:circleColor="@color/bluegrey"
            app:emotionText="@string/nav_custom_text_blue_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_emotion_cornflower_item" />

        <com.yapp.picon.presentation.customview.CustomEmotionItem
            android:id="@+id/nav_emotion_very_light_brown_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:circleColor="@color/very_light_brown"
            app:emotionText="@string/nav_custom_text_very_light_brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_emotion_blue_grey_item" />

        <com.yapp.picon.presentation.customview.CustomEmotionItem
            android:id="@+id/nav_emotion_warm_grey_item"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:circleColor="@color/warm_grey"
            app:emotionText="@string/nav_custom_text_warm_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_emotion_very_light_brown_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>