<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dialogRemove"
            type="com.yapp.picon.presentation.postdetail.PostDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/dialog_custom_remove_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/dialog_custom_remove_post_title"
            android:textColor="@color/very_light_pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dialog_custom_remove_post_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="74dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:onClick="@{dialogRemove::clickDialogRemoveButton}"
            android:text="@string/remove"
            android:textColor="@color/coral"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_custom_remove_post_title" />

        <Button
            android:id="@+id/dialog_custom_remove_post_cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="74dp"
            android:layout_height="60dp"
            android:onClick="@{dialogRemove::clickDialogCancelButton}"
            android:text="@string/cancellation"
            android:textColor="@color/very_light_pink"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_custom_remove_post_button"
            app:layout_constraintEnd_toStartOf="@+id/dialog_custom_remove_post_button"
            app:layout_constraintTop_toTopOf="@+id/dialog_custom_remove_post_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>